# api-recomendacao-e-commerce

./: .env  .env.example  Dockerfile  QUICKSTART.md  README.md  app_setup.py  batch_processor.py  config.py  db_service.py  docker-compose.yml  example_usage.py  init_system.py  main.py  pyproject.toml  requirements.txt  setup_db.sql  start_simple.py  test_api.html  teste.py
airflow/: requirements.txt
airflow/dags/: recom_batch.py
api/: config.py  main.py  requirements.txt
init/: oltp.sql  op.sql
models/: __init__.py  collaborative.py  content_based.py  cooccurrence.py  hybrid.py
routes/: analytics.py  auth.py  recommendations.py
schemas/: analytics.py  complementary.py  product.py  recommendation.py  user.py
services/: __init__.py  analytics_service.py  auth_service.py  complementary_service.py  elasticsearch_service.py  postgresql_service.py  recommendation_service.py  redis_service.py
utils/: auth.py  cache.py  logging.py
